只能抢二等座的票,不可学生,可多个乘车人

--- a/config
+++ b/config
@@ -1,7 +1,9 @@
-出发地=威海
-目的地=青岛北
-时间=2024-04-30
+车次=D2926
+出发站=威海
+到达站=青岛西
+出发时间=2024-08-03
+0商务1一等2二等3软卧4硬卧=1
+乘车人=魏庆伟
 用户名=
 密码=
 id_card=
-车次=C6520
